# research_repository

./: README.md
bt_repo/: docker-compose.yml  invenio.cfg
bt_repo/botswana-research-repository/: .invenio  Pipfile  README.md  docker-compose.full.yml  docker-services.yml  invenio.cfg
bt_repo/botswana-research-repository/docker/nginx/: test.crt  test.key
bt_repo/botswana-research-repository/docker/pgadmin/: servers.json
bt_repo/botswana-research-repository/site/: .gitkeep  setup.cfg
bt_repo/botswana-research-repository/site/botswana_research_repository/: views.py  webpack.py
dspace/: .env  Dockerfile  backup.sh  docker-compose.yml  entrypoint.sh  install.sh  setup.md  update.sh
dspace/config/: local.cfg  log4j2.xml
dspace/nginx/conf.d/: dspace.conf  limit_req.conf
dspace/nginx/ssl/: dspace.crt  dspace.key
