
[metadata]
name = botswana-research-repository

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    botswana_research_repository_views = botswana_research_repository.views:create_blueprint
invenio_assets.webpack =
    botswana_research_repository_theme = botswana_research_repository.webpack:theme
